# web-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_phase1_initial_schema.py  0002_subject_chat_reads.py  0003_fix_user_search_hrefs.py  0004_help_requests.py  0005_user_settings_feed_defaults.py  0006_help_request_tags.py  (+10 more)
app/: cache.py  config.py  db.py  dependencies.py  main.py
docs/: ARCHITECTURE.md  CI_TESTING.md  CONTRIBUTING_ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
scripts/: seed.py
social_production_web_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_actions_search_notifications_e2e.py  test_activity_history.py  test_board_standing_e2e.py  test_bootstrap_personal_platform_e2e.py  test_bootstrap_shape_e2e.py  test_comments_notifications.py  test_contract_smoke.py  test_e2e_scripts_pytest.py  test_event_detail_shape_e2e.py  test_events_plans_phases_e2e.py  test_feed_update_fields_e2e.py  test_feedback.py  test_feeds_e2e.py  test_governance_votes.py  test_missing_endpoints_e2e.py  test_new_writes_e2e.py  test_notifications_serialization.py  test_personal_service_requests_e2e.py  test_phase_close_vote_e2e.py  test_phase_naming_e2e.py  test_private_scope_search.py  test_project_detail_shape_e2e.py  test_projects_software_e2e.py  test_public_community_event_e2e.py  test_remaining_adapters_e2e.py  test_scope_members_access.py  test_security.py
(+139 files in other folders)
