[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-production-web-backend"
version = "0.1.0"
description = "FastAPI backend for Social Production"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "bcrypt==4.0.1",
  "redis>=5.0",
  "cryptography>=42.0",
]

[tool.setuptools]
packages = ["app"]
