[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-production-web-backend"
version = "0.1.0"
description = "FastAPI backend for Social Production"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "PyJWT>=2.9",
  "passlib[bcrypt]>=1.7",
  "bcrypt==4.0.1",
  "redis>=5.0",
  "cryptography>=42.0",
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["E501"]
"app/services/**/*.py" = ["E501"]
"app/auth/**/*.py" = ["E501"]
"app/middleware/**/*.py" = ["E501"]
"app/routers/auth.py" = ["E501"]
"app/config.py" = ["E501"]
"app/main.py" = ["E501"]

